<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/register_title_container_bottom_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1348" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/register_register_title_top_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/register_input_fields_top_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_title_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/warm_blue"
        app:layout_constraintBottom_toTopOf="@id/register_title_container_bottom_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/register_title_container_title_top_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2895" />

        <TextView
            android:id="@+id/login_title_container_title"
            android:layout_width="0dp"
            android:layout_height="@dimen/title_container_title_height"
            android:fontFamily="@font/julius_sans_one"
            android:text="@string/title_container_title_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/title_container_title_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/register_title_container_title_top_guideline"
            app:layout_constraintVertical_bias="0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/register_register_title"
        android:layout_width="0dp"
        android:layout_height="@dimen/register_register_title_height"
        android:fontFamily="@font/jura_bold"
        android:gravity="center"
        android:text="@string/register_register_title_text"
        android:textColor="@color/black"
        android:textSize="@dimen/register_register_title_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/register_register_title_top_guideline"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/register_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/register_name_text_height"
        android:layout_marginStart="@dimen/register_name_margin_start"
        android:fontFamily="@font/jura_bold"
        android:text="@string/register_name_text"
        android:textColor="@color/black"
        android:textSize="@dimen/register_name_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/register_input_fields_top_guideline" />

    <FrameLayout
        android:id="@+id/register_name_input_field"
        android:layout_width="@dimen/register_user_input_field_width"
        android:layout_height="@dimen/register_user_input_field_height"
        android:background="@color/silver"
        app:layout_constraintBottom_toBottomOf="@id/register_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_name"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/register_id"
        android:layout_width="0dp"
        android:layout_height="@dimen/register_id_height"
        android:layout_marginStart="@dimen/register_id_margin_start"
        android:layout_marginTop="@dimen/register_id_margin_top"
        android:fontFamily="@font/jura_bold"
        android:text="@string/register_id_text"
        android:textColor="@color/black"
        android:textSize="@dimen/register_id_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_name_input_field" />


    <FrameLayout
        android:id="@+id/register_id_input_field"
        android:layout_width="@dimen/register_user_input_field_width"
        android:layout_height="@dimen/register_user_input_field_height"
        android:background="@color/silver"
        app:layout_constraintBottom_toBottomOf="@id/register_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_id"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/register_email"
        android:layout_width="0dp"
        android:layout_height="@dimen/register_email_height"
        android:layout_marginStart="@dimen/register_email_margin_start"
        android:layout_marginTop="@dimen/register_email_margin_top"
        android:fontFamily="@font/jura_bold"
        android:text="@string/register_email_text"
        android:textColor="@color/black"
        android:textSize="@dimen/register_email_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_id_input_field" />

    <FrameLayout
        android:id="@+id/register_email_input_field"
        android:layout_width="@dimen/register_email_input_field_width"
        android:layout_height="@dimen/register_email_input_field_height"
        android:background="@color/silver"
        app:layout_constraintBottom_toBottomOf="@id/register_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_email"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/register_password"
        android:layout_width="0dp"
        android:layout_height="@dimen/register_password_height"
        android:layout_marginStart="@dimen/register_password_margin_start"
        android:layout_marginTop="@dimen/register_password_margin_top"
        android:fontFamily="@font/jura_bold"
        android:text="@string/register_password_text"
        android:textColor="@color/black"
        android:textSize="@dimen/register_password_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_email_input_field" />

    <FrameLayout
        android:id="@+id/register_password_input_field"
        android:layout_width="@dimen/register_password_input_field_width"
        android:layout_height="@dimen/register_password_input_field_height"
        android:background="@color/silver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_password"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/register_register_button"
        android:layout_width="@dimen/register_register_button_width"
        android:layout_height="@dimen/register_register_button_height"
        android:fontFamily="@font/jura_bold"
        android:text="@string/register_register_button_text"
        android:background="@drawable/button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_password_input_field"
        app:layout_constraintVertical_bias="0.7" />


</androidx.constraintlayout.widget.ConstraintLayout>